--- a/canteen_app/pubspec.yaml
+++ b/canteen_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   fpdart: ^1.1.0
   supabase_flutter: ^2.5.3
   flutter_bloc: ^8.1.5
+  http: ^0.13.3
+  curved_navigation_bar: ^1.0.3
+  textfield_shadow: any
 
 dev_dependencies:
   flutter_test:
