--- a/canteen_app/pubspec.yaml
+++ b/canteen_app/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   http: ^0.13.3
   curved_navigation_bar: ^1.0.3
   textfield_shadow: any
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.5
+  random_string: ^2.3.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
