--- a/canteen_app/android/build.gradle
+++ b/canteen_app/android/build.gradle
@@ -1,3 +1,16 @@
+buildscript{
+    ext.kotlin_version = '1.7.10'
+    repositories{
+        google()
+        mavenCentral()
+    }
+    dependencies{
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.google.gms:google-services:4.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -16,3 +29,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
