--- a/canteen_app/android/app/src/main/AndroidManifest.xml
+++ b/canteen_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="canteen_app"
         android:name="${applicationName}"
@@ -42,4 +43,5 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+    
 </manifest>
